--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
-  - "8"
+- '8'
 install:
-  - npm install
+- npm install
 script:
-  - node index.js
+- node index.js
+before_install:
+- openssl aes-256-cbc -K $encrypted_d358fb7b667b_key -iv $encrypted_d358fb7b667b_iv
+  -in key.json.enc -out key.json -d
