--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
     "cheerio": "^1.0.0-rc.2",
     "iconv-lite": "^0.4.24",
     "mosca": "^2.8.3",
-    "request": "^2.88.0"
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
+    "sqlite3": "^4.0.2"
   }
 }
